# Spotify-Rust-Web-Client

./: .env  .gitignore  Cargo.toml  README.md  copilotprompt.txt  example.js  example.rs  explanation.md  plan.txt  prerustdocs.md  rustdocs.html  rustdocs.md  server.py  tiledocs.md
pkg/: .gitignore  api.js  auth.js  index.html  main.css  package.json  playback.js  sdk.js  spotify_egui.js
site/: api.js  auth.js  index.html  playback.js
src/: app_state.rs  lib.rs  main.rs  models.rs  spotify_apis.rs  storage.rs  token.rs  ui.rs  utils.rs
src/api_request/: Saved_Tracks.rs  Track_Status.rs  User_Profile.rs  imagerender.rs  mod.rs  models.rs  playlist_tracks.rs  playlists.rs  spotify_apis.rs  token.rs
src/image_processing/: collage.rs  color_analysis.rs  image_processor.rs  mod.rs  user_interface.rs
src/mediaplayer/: mediaplayerwidget.rs  mod.rs  scrubber.rs
src/ui/: app_state.rs  collage.rs  mod.rs  playlist_tracks.rs  playlists_window.rs  savedtracks.rs  settings.rs  tracks_ui.rs  ui.rs
