[package]
name = "spotify-egui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "spotify_egui"
path = "src/lib.rs"

[[bin]]
name = "spotify-egui"
path = "src/main.rs"

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = ["default_fonts", "glow"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
once_cell = "1.18.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3"
futures = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }