[package]
name = "spotify-egui"
version = "0.1.0"
edition = "2021"

[package.metadata]
wasm-opt = true

[lib]
crate-type = ["cdylib"]
name = "spotify_egui"
path = "src/lib.rs"

[[bin]]
name = "spotify-egui"
path = "src/main.rs"

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = ["default_fonts", "glow"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
    "Window",
    "Storage",
    "Performance",
    "PerformanceTiming",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Document",
    "Element"
] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
once_cell = "1.20.2"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.76"
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
egui-theme-switch = "0.2.3"
egui_extras = { version = "0.30.0", features = ["all_loaders", "http", "image"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }
egui-phosphor = { version = "0.8", features = ["thin", "light", "regular", "bold", "fill"] }
