[package]
name = "spotify-egui"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Remove panic unwinding to reduce size
strip = true    

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

# Binary and library configuration
[lib]
crate-type = ["cdylib"]
name = "spotify_egui"
path = "src/lib.rs"

[[bin]]
name = "spotify-egui"
path = "src/main.rs"

[dependencies]
# Core UI dependencies
egui = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.30.0", features = ["all_loaders", "http", "image"] }
egui-theme-switch = "0.2.3"
egui-phosphor = { version = "0.8.0", features = ["bold"] }
egui_dock = "0.15.0"

# WASM-related dependencies
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
getrandom = { version = "0.2.15", features = ["js"] }

# Web-related dependencies
web-sys = { version = "0.3.77", features = [
    "Window",
    "Storage",
    "Performance",
    "PerformanceTiming",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Document",
    "Element"
] }
reqwest = { version = "0.12.12", features = ["json"] }

# Utility dependencies
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
once_cell = "1.20.2"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }